# ebpf-analyzer

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  Makefile  README.md  hashmap.json  index.html  overview.html  package.json  pnpm-lock.yaml  prerequisites.html  resources.html
.github/workflows/: docs.yml  test.yml
analyzer/: .gitignore  Cargo.toml  Makefile  conditional.html  index.html
analyzer/src/: analyzer.rs  blocks.rs  lib.rs
analyzer/src/branch/: fork.rs  id.rs  mod.rs  resource.rs  vm.rs
analyzer/src/interpreter/: helper.rs  mod.rs  value.rs
analyzer/src/safe/: mod.rs
analyzer/src/spec/: mod.rs  proto.rs
analyzer/src/track/: pointer.rs  range.rs  scalar.rs
analyzer/src/track/pointees/: dyn_region.rs  empty_region.rs  map_resource.rs  mod.rs  simple_resource.rs  stack_region.rs  struct_region.rs
analyzer/tests/: analyzer_test.rs  asm_test.rs  conformance_test.rs  object_test_.rs  vm_alu_test.rs
analyzer/tests/bpf-src/: branching-loop.c  dynamic-fail.c  dynamic-fail.txt  dynamic-range.c  dynamic-range.txt  helper-test.c  large-loop.c  larger-loop.c  larger-loop.txt  loop-not-ok.c  loop-not-ok.txt  loop-ok.c  map-fail.c  map-fail.txt  map-test.txt  printk-fail.c  printk.c  printk.txt  resource-fail.c  resource-fail.txt  resource-ok.c  resource-ok.txt  simple-1.c  simple-1.txt
analyzer/tests/bpf-src/asm/: call-stack-fail.data  call-stack.data  call-usage-fail1.data  call-usage-fail2.data
assets/: analyzer_conditional.md.0090de09.js  analyzer_conditional.md.0090de09.lean.js  analyzer_index.md.f2062786.lean.js  app.3775c9dd.js  impl_interpreter.md.3558f3e7.js  impl_interpreter.md.3558f3e7.lean.js  impl_syscall.md.587bba5b.js  impl_syscall.md.587bba5b.lean.js  index.md.0c986d3d.js  overview.md.cd9c8988.js  overview.md.cd9c8988.lean.js  prerequisites.md.190304d9.js  prerequisites.md.190304d9.lean.js  resources.md.15b4f944.js  resources.md.15b4f944.lean.js  style.96161d30.css  user_libbpf.md.015eba06.js  user_libbpf.md.015eba06.lean.js  user_spec.md.acfe27ea.js  user_spec.md.acfe27ea.lean.js  user_syscall.md.d405e607.js  user_syscall.md.d405e607.lean.js  verifier_arithmetic.md.66730194.js  verifier_arithmetic.md.66730194.lean.js  verifier_conditional.md.9cf909b3.js  verifier_conditional.md.9cf909b3.lean.js  verifier_functions.md.5d94839c.js  verifier_functions.md.5d94839c.lean.js  verifier_post-processing.md.a299d499.js  verifier_post-processing.md.a299d499.lean.js  verifier_undecidability.md.6dc664fa.js  verifier_undecidability.md.6dc664fa.lean.js  verifier_verifier.md.ad001396.js  verifier_verifier.md.ad001396.lean.js
assets/chunks/: virtual_search-data.5b8e9a15.js
compiler/: Cargo.toml
compiler/src/: compiler.rs  lib.rs  module.rs
compiler/tests/: conformance_test.rs
crate/atomic/: Cargo.toml
crate/atomic/src/: lib.rs
crate/bpfasm/: Cargo.toml
crate/bpfasm/src/: compiler.rs  lib.rs
crate/bpfasm/tests/: conformance_test.rs
crate/consts/: Cargo.toml
crate/consts/src/: lib.rs
crate/graphs/: Cargo.toml
crate/graphs/src/: algorithm.rs  lib.rs
crate/graphs/tests/: dfs_tests.rs  unlink_test.rs
crate/lldump/: Cargo.toml
crate/lldump/src/: conformance.rs  helper.rs  lib.rs
crate/macros/: Cargo.toml  gen.sh
crate/macros/src/: block.rs  generator.rs  lib.rs  opcode.rs  parser.rs
crate/macros/tests/: match_test.rs
crates/atomic/: Cargo.toml
crates/atomic/src/: lib.rs
crates/bpfasm/: Cargo.toml
crates/bpfasm/src/: compiler.rs
crates/bpfasm/tests/: conformance_test.rs
crates/consts/: Cargo.toml
crates/consts/src/: lib.rs
crates/lldump/: Cargo.toml
crates/lldump/src/: conformance.rs  helper.rs  lib.rs  object.rs
crates/macros/: Cargo.toml  README.md  gen.sh
crates/macros/src/: block.rs  generator.rs  lib.rs  opcode.rs  opcode_gen.rs  parser.rs
crates/macros/tests/: match_test.rs  opcode_gen_test.rs
docs/: index.md  overview.md  prerequisites.md  resources.md  vite.config.ts
docs/.vitepress/: config.js
docs/.vitepress/theme/: index.js
docs/analyzer/: conditional.md  index.md
docs/impl/: interpreter.md  syscall.md  verifier.md
docs/user/: libbpf.md  spec.md  syscall.md
docs/verifier/: arithmetic.md  conditional.md  functions.md  post-processing.md  undecidability.md  verifier.md
impl/: interpreter.html  syscall.html
scripts/: conformance.sh  coverage.sh
src/: analyzer.rs  blocks.rs  lib.rs
src/branch/: checked_value.rs  context.rs  fork.rs  id.rs  mod.rs  resource.rs  vm.rs
src/interpreter/: context.rs  helper.rs  mod.rs  value.rs  vm.rs
src/safe/: mod.rs
src/spec/: consts.rs  mod.rs  proto.rs
src/track/: comparable.rs  mod.rs  pointer.rs  range.rs  scalar.rs  tnum.rs
src/track/pointees/: dyn_region.rs  empty_region.rs  map_resource.rs  mod.rs  stack_region.rs  struct_region.rs
src/vm/: context.rs  mod.rs  value.rs  vm.rs
tests/: analyzer_test.rs  asm_test.rs  conformance_test.rs  helper_call_test.rs  instruction_test.rs  vm_alu_test.rs  vm_atomic_test.rs  vm_jmp_test.rs  vm_sl_test.rs  vm_test.rs
tests/bpf-src/: branching-loop.c  branching-loop.txt  dynamic-fail.txt  dynamic-range.c  dynamic-range.txt  helper-test.c  helper-test.txt  large-loop.c  large-loop.txt  loop-not-ok.c  loop-not-ok.txt  loop-ok.c  loop-ok.txt  map-test.c  printk-fail.c  printk-fail.txt  printk.c  printk.txt  resource-fail.c  resource-fail.txt  resource-ok.c  resource-ok.txt  simple-1.c  simple-1.txt  simple-2.txt
tests/bpf-src/asm/: call-stack-fail.data
user/: libbpf.html  spec.html  syscall.html
verifier/: arithmetic.html  conditional.html  functions.html  post-processing.html  undecidability.html  verifier.html
