[workspace]
members = [
    "analyzer",
    "compiler",
    "crates/atomic",
    "crates/consts",
    "crates/macros",
    "crates/lldump",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://githubcom/yesh0/ebpf-analyzer"
repository = "https://githubcom/yesh0/ebpf-analyzer"
license = "MIT"
