[package]
name = "ebpf-analyzer"
description = "More than an eBPF verifier"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["atomic32", "atomic64"]
atomic32 = ["ebpf-atomic/atomic32"]
atomic64 = ["ebpf-atomic/atomic64"]
nightly = ["ebpf-atomic/nightly"]

[dependencies]
opcode-macros = { path = "./../crates/macros", version = "0.1.0" }
ebpf-atomic = { path = "./../crates/atomic", optional = true }
ebpf-consts = { path = "./../crates/consts" }

bitflags = "1.3"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
rand = "0.8"
llvm-util = { path = "./../crates/lldump" }
