[package]
name = "ebpf-compiler"
description = "An eBPF JIT/AOT compiler using Cranelift"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
nightly = []


[dependencies]
opcode-macros = { path = "../crates/macros" }
ebpf-analyzer = { path = "../analyzer" }
ebpf-consts = { path = "../crates/consts" }
anyhow = { version = "1.0", default-features = false }
target-lexicon = "0.12.5"
cranelift-frontend = "0.90.1"
cranelift-codegen = { version = "0.90.1", default-features = false, features = ["core"] }
cranelift-module = "0.90.1"

[dev-dependencies]
llvm-util = { path = "../crates/lldump" }
