[package]
name = "ebpf-aot"
version = "0.1.0"
edition = "2021"

[dependencies]
ebpf-analyzer = { path = "./../.." }
ebpf-macros = { path = "./../macros" }
ebpf-consts = { path = "./../consts" }
llvm-util = { path = "./../lldump" }
cranelift-frontend = "0.90.1"
cranelift-codegen = "0.90.1"
cranelift-module = "0.90.1"
cranelift-jit = "0.90.1"