[package]
name = "ebpf-aot"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ebpf-analyzer = { path = "../../analyzer" }
ebpf-macros = { path = "../macros" }
ebpf-consts = { path = "../consts" }
llvm-util = { path = "../lldump" }
target-lexicon = "0.12.5"
cranelift-frontend = "0.90.1"
cranelift-codegen = "0.90.1"
cranelift-module = "0.90.1"
cranelift-jit = "0.90.1"

[dev-dependencies]
llvm-util = { path = "../lldump" }
