[package]
name = "opcode-macros"
description = "Macros for opcodes encoded in bit fields"
keywords = ["bytecode", "instructions", "match"]
categories = ["compilers", "rust-patterns"]
readme = "README.md"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.102"

[dev-dependencies]
ebpf-consts = { path = "../consts" }

[lib]
proc-macro = true
